--- a/fast64_internal/f3d/node_library/Advanced_Texture_Settings.json
+++ b/fast64_internal/f3d/node_library/Advanced_Texture_Settings.json
@@ -12,6 +12,7 @@
 				-108.689697265625,
 				-41.78269577026367
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -34,6 +35,7 @@
 				-108.68953704833984,
 				156.6044921875
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -93,6 +95,7 @@
 				315.945068359375,
 				202.6527557373047
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -115,6 +118,7 @@
 				315.945068359375,
 				225.0103302001953
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -137,6 +141,7 @@
 				315.9451599121094,
 				90.36263275146484
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -416,6 +421,7 @@
 				-427.7146301269531,
 				196.370849609375
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -553,5 +559,5 @@
 			"bl_idname": "NodeSocketVector"
 		}
 	],
-	"cached_hash": "17fc653962b4c5c95246bbf1c0e5d7b2"
+	"cached_hash": "bfab299b282f0f4c7934cdcca29eb0f4"
 }
