--- a/fast64_internal/f3d/node_library/Advanced_Texture_Settings_and_3_Point.json
+++ b/fast64_internal/f3d/node_library/Advanced_Texture_Settings_and_3_Point.json
@@ -48,6 +48,7 @@
 				-525.1767578125,
 				-198.3529052734375
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -70,6 +71,7 @@
 				-574.6416015625,
 				279.4343566894531
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -92,6 +94,7 @@
 				-550.984375,
 				258.0004577636719
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -114,6 +117,7 @@
 				-525.1767578125,
 				236.4022674560547
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -136,6 +140,7 @@
 				-429.927734375,
 				-66.05220794677734
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -162,6 +167,7 @@
 				-452.9910888671875,
 				66.4532470703125
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -188,6 +194,7 @@
 				-498.0604553222656,
 				153.7579803466797
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -218,6 +225,7 @@
 				-477.39208984375,
 				132.5207977294922
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -248,6 +256,7 @@
 				-346.5621643066406,
 				-154.4248504638672
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -274,6 +283,7 @@
 				-346.5621643066406,
 				-132.1239776611328
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -300,6 +310,7 @@
 				-346.5621643066406,
 				-110.1356201171875
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -326,6 +337,7 @@
 				-346.5621643066406,
 				-88.19503021240234
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -352,6 +364,7 @@
 				-346.5621643066406,
 				-66.21297454833984
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -378,6 +391,7 @@
 				-346.5621643066406,
 				-43.8480224609375
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -404,6 +418,7 @@
 				-346.5621643066406,
 				0.4914143979549408
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -430,6 +445,7 @@
 				-346.5621643066406,
 				66.3875732421875
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -456,6 +472,7 @@
 				-346.5621643066406,
 				-176.2860107421875
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -482,6 +499,7 @@
 				284.5577697753906,
 				318.4105529785156
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -508,6 +526,7 @@
 				-9.223795890808105,
 				-181.28619384765625
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -530,6 +549,7 @@
 				-31.00553321838379,
 				-357.0798034667969
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -552,6 +572,7 @@
 				-574.6416015625,
 				110.06380462646484
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -574,6 +595,7 @@
 				-550.984375,
 				88.23099517822266
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -596,6 +618,7 @@
 				-452.9910888671875,
 				214.2618408203125
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -622,6 +645,7 @@
 				-429.927734375,
 				191.8970184326172
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -648,6 +672,7 @@
 				-498.0604553222656,
 				323.9491882324219
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -827,6 +852,7 @@
 				-620.0514526367188,
 				44.00917434692383
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -853,6 +879,7 @@
 				-598.7180786132812,
 				-88.003662109375
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -879,6 +906,7 @@
 				-477.39208984375,
 				302.5383605957031
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -905,6 +933,7 @@
 				-477.5147705078125,
 				494.3337707519531
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -927,6 +956,7 @@
 				-111.90645599365234,
 				494.3337707519531
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -949,6 +979,7 @@
 				-598.8093872070312,
 				504.9303283691406
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -971,6 +1002,7 @@
 				-106.27156829833984,
 				504.9303283691406
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -993,6 +1025,7 @@
 				-429.5122985839844,
 				516.55712890625
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1015,6 +1048,7 @@
 				-101.15633392333984,
 				516.55712890625
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1037,6 +1071,7 @@
 				-105.02877044677734,
 				541.42138671875
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1059,6 +1094,7 @@
 				-99.70003509521484,
 				551.44140625
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1081,6 +1117,7 @@
 				-94.6142578125,
 				562.2374877929688
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1103,6 +1140,7 @@
 				-452.9122009277344,
 				562.2374877929688
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1125,6 +1163,7 @@
 				-620.484130859375,
 				551.44140625
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1147,6 +1186,7 @@
 				-498.2127380371094,
 				541.42138671875
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1169,6 +1209,7 @@
 				284.5577697753906,
 				-45.70556640625
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1284,6 +1325,7 @@
 				254.22705078125,
 				501.927490234375
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1306,6 +1348,7 @@
 				222.6530303955078,
 				444.0285339355469
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1328,6 +1371,7 @@
 				222.653076171875,
 				-234.6310272216797
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1350,6 +1394,7 @@
 				264.8857421875,
 				-126.57743072509766
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1376,6 +1421,7 @@
 				254.2271270751953,
 				-210.7318115234375
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1398,6 +1444,7 @@
 				849.402587890625,
 				318.552001953125
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1434,6 +1481,7 @@
 				794.720947265625,
 				-147.0133514404297
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1456,6 +1504,7 @@
 				821.3632202148438,
 				-169.5363006591797
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1478,6 +1527,7 @@
 				794.7206420898438,
 				-45.77677536010742
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1500,6 +1550,7 @@
 				821.3632202148438,
 				-88.83487701416016
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1589,6 +1640,7 @@
 				-346.5621643066406,
 				-21.8480224609375
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1615,6 +1667,7 @@
 				-346.5621643066406,
 				44.40535354614258
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1641,6 +1694,7 @@
 				-346.5621643066406,
 				22.45853614807129
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1667,6 +1721,7 @@
 				849.402587890625,
 				-125.4228515625
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1689,6 +1744,7 @@
 				849.402587890625,
 				-191.642578125
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1711,6 +1767,7 @@
 				-9.223958015441895,
 				400.6155090332031
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1733,6 +1790,7 @@
 				-31.00553321838379,
 				377.9384460449219
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1755,6 +1813,7 @@
 				-228.2477569580078,
 				443.7755432128906
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1781,6 +1840,7 @@
 				-215.44775390625,
 				421.7145080566406
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -2081,5 +2141,5 @@
 			"bl_idname": "NodeSocketFloat"
 		}
 	],
-	"cached_hash": "67855b8a53aa97afd06a2e5420cb0690"
+	"cached_hash": "8fbb5427244a5c9551f79c28351c6a0b"
 }
