--- a/fast64_internal/f3d/node_library/ApplyFresnel.json
+++ b/fast64_internal/f3d/node_library/ApplyFresnel.json
@@ -91,6 +91,7 @@
 				85.1312255859375,
 				-124.46807861328125
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -163,6 +164,22 @@
 						0.5,
 						1.0
 					]
+				},
+				"8": {
+					"default_value": [
+						0.0,
+						0.0,
+						0.0
+					],
+					"enabled": false
+				},
+				"9": {
+					"default_value": [
+						0.0,
+						0.0,
+						0.0
+					],
+					"enabled": false
 				}
 			},
 			"outputs": {
@@ -185,6 +202,14 @@
 							"socket": "Color"
 						}
 					]
+				},
+				"3": {
+					"default_value": [
+						0.0,
+						0.0,
+						0.0
+					],
+					"enabled": false
 				}
 			}
 		},
@@ -199,6 +224,7 @@
 				84.1019287109375,
 				37.3865966796875
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -245,6 +271,7 @@
 				84.58648681640625,
 				-204.11886596679688
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -267,6 +294,7 @@
 				-105.2149658203125,
 				-182.810791015625
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -293,6 +321,7 @@
 				-141.02581787109375,
 				60.564178466796875
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -315,6 +344,7 @@
 				-138.74072265625,
 				-103.96356201171875
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -337,6 +367,7 @@
 				-104.9713134765625,
 				81.94259643554688
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -478,5 +509,5 @@
 			"bl_idname": "NodeSocketFloat"
 		}
 	],
-	"cached_hash": "c69bd45c77c4479a21c95ce55111e1ca"
+	"cached_hash": "d02217253a2d71d78a09d4a00be876fc"
 }
