--- a/fast64_internal/f3d/node_library/Lite_Texture_Settings.json
+++ b/fast64_internal/f3d/node_library/Lite_Texture_Settings.json
@@ -48,6 +48,7 @@
 				-108.689697265625,
 				55.29496383666992
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -70,6 +71,7 @@
 				-108.68953704833984,
 				253.6821746826172
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -129,6 +131,7 @@
 				315.945068359375,
 				299.7303771972656
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -151,6 +154,7 @@
 				315.945068359375,
 				322.0879821777344
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -210,6 +214,7 @@
 				315.9451599121094,
 				187.4403533935547
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -267,6 +272,7 @@
 				-427.7146301269531,
 				283.98052978515625
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -445,5 +451,5 @@
 			"bl_idname": "NodeSocketVector"
 		}
 	],
-	"cached_hash": "48dbd31c1af793984e68e3150b34b77f"
+	"cached_hash": "845494e9c9b2cfb5e514f0aae49c6d11"
 }
