--- a/fast64_internal/f3d/node_library/Lite_Texture_Settings_and_3_Point.json
+++ b/fast64_internal/f3d/node_library/Lite_Texture_Settings_and_3_Point.json
@@ -48,6 +48,7 @@
 				-574.6416015625,
 				110.06380462646484
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -70,6 +71,7 @@
 				-550.984375,
 				88.23099517822266
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -92,6 +94,7 @@
 				209.2364959716797,
 				-45.70556640625
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -207,6 +210,7 @@
 				147.331787109375,
 				-234.6310272216797
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -229,6 +233,7 @@
 				189.564453125,
 				-126.57743072509766
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -255,6 +260,7 @@
 				178.9058380126953,
 				-210.7318115234375
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -291,6 +297,7 @@
 				719.399658203125,
 				-147.0133514404297
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -313,6 +320,7 @@
 				746.0419311523438,
 				-169.5363006591797
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -335,6 +343,7 @@
 				774.081298828125,
 				-125.4228515625
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -357,6 +366,7 @@
 				719.3993530273438,
 				-45.77681350708008
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -379,6 +389,7 @@
 				746.0419311523438,
 				-88.83487701416016
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -401,6 +412,7 @@
 				774.081298828125,
 				-191.642578125
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -458,6 +470,7 @@
 				209.2366485595703,
 				153.2447967529297
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -484,6 +497,7 @@
 				774.0811157226562,
 				153.38623046875
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -506,6 +520,7 @@
 				-156.6157989501953,
 				99.66780853271484
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -528,6 +543,7 @@
 				-525.1767578125,
 				-22.68853759765625
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -550,6 +566,7 @@
 				-574.6416015625,
 				223.5192413330078
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -572,6 +589,7 @@
 				-550.984375,
 				202.0853271484375
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -594,6 +612,7 @@
 				-525.1767578125,
 				180.4871368408203
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -616,6 +635,7 @@
 				-498.0604553222656,
 				268.0340576171875
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -642,6 +662,7 @@
 				-477.39208984375,
 				246.623291015625
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -668,6 +689,7 @@
 				-477.5147705078125,
 				438.4186706542969
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -690,6 +712,7 @@
 				-498.2127380371094,
 				485.5062255859375
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -712,6 +735,7 @@
 				-187.2277069091797,
 				438.4186706542969
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -734,6 +758,7 @@
 				-180.3500518798828,
 				485.5062255859375
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -756,6 +781,7 @@
 				-130.96630859375,
 				365.7993469238281
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -782,6 +808,7 @@
 				178.90576171875,
 				407.5649719238281
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -804,6 +831,7 @@
 				147.331787109375,
 				349.6660461425781
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -826,6 +854,7 @@
 				-156.6157989501953,
 				387.8603820800781
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -885,6 +914,7 @@
 				-206.4002227783203,
 				322.0232849121094
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -907,6 +937,7 @@
 				-184.61865234375,
 				344.7003479003906
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -929,6 +960,7 @@
 				-498.0604553222656,
 				153.7579803466797
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -951,6 +983,7 @@
 				-477.39208984375,
 				132.5207977294922
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -973,6 +1006,7 @@
 				-368.9119567871094,
 				-118.2419204711914
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -999,6 +1033,7 @@
 				-368.9119567871094,
 				-140.1030731201172
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1025,6 +1060,7 @@
 				-368.9119567871094,
 				-68.50675201416016
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1051,6 +1087,7 @@
 				-368.9119567871094,
 				-46.50675582885742
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1077,6 +1114,7 @@
 				-368.9119567871094,
 				-92.8171157836914
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1103,6 +1141,7 @@
 				-368.9119567871094,
 				-164.9230194091797
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1217,6 +1256,7 @@
 				-620.0023803710938,
 				154.0266571044922
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1243,6 +1283,7 @@
 				-620.0894165039062,
 				-89.2291030883789
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1265,6 +1306,7 @@
 				-597.0549926757812,
 				-162.0089569091797
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1287,6 +1329,7 @@
 				-597.1799926757812,
 				131.80810546875
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1313,6 +1356,7 @@
 				-130.9663543701172,
 				1.6489664316177368
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1335,6 +1379,7 @@
 				-206.4002227783203,
 				-203.32568359375
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1357,6 +1402,7 @@
 				-184.6184844970703,
 				-137.8321075439453
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1608,5 +1654,5 @@
 			"bl_idname": "NodeSocketFloat"
 		}
 	],
-	"cached_hash": "184fdff25d5540da66a6face3895b075"
+	"cached_hash": "6c014491e426ec05d429ec9b04779e22"
 }
