--- a/fast64_internal/f3d/node_library/TextureSettings_Advanced.json
+++ b/fast64_internal/f3d/node_library/TextureSettings_Advanced.json
@@ -12,6 +12,7 @@
 				327.6009826660156,
 				-84.384521484375
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -34,6 +35,7 @@
 				297.8438415527344,
 				-61.53987503051758
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -56,6 +58,7 @@
 				245.616455078125,
 				-19.29923439025879
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -78,6 +81,7 @@
 				221.9515838623047,
 				4.295003414154053
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -100,6 +104,7 @@
 				201.9014434814453,
 				25.335693359375
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -122,6 +127,7 @@
 				273.489990234375,
 				-40.811767578125
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -144,6 +150,7 @@
 				153.7096405029297,
 				68.17138671875
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -166,6 +173,7 @@
 				178.608154296875,
 				47.25822067260742
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -188,6 +196,7 @@
 				134.104248046875,
 				91.15445709228516
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -210,6 +219,7 @@
 				113.71923828125,
 				113.23600006103516
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -232,6 +242,7 @@
 				76.44368743896484,
 				157.7549591064453
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -254,6 +265,7 @@
 				-15.6982421875,
 				244.58154296875
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -276,6 +288,7 @@
 				9.509033203125,
 				222.4796600341797
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -298,6 +311,7 @@
 				96.21468353271484,
 				135.1683807373047
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -320,6 +334,7 @@
 				369.869140625,
 				-106.8720703125
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -342,6 +357,7 @@
 				54.72395706176758,
 				179.189697265625
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -364,6 +380,7 @@
 				32.9530029296875,
 				201.17822265625
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -386,6 +403,7 @@
 				193.96044921875,
 				-495.434814453125
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -408,6 +426,7 @@
 				262.6561584472656,
 				-431.9967346191406
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -430,6 +449,7 @@
 				238.340576171875,
 				-452.544677734375
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -452,6 +472,7 @@
 				216.3711700439453,
 				-474.1058044433594
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -474,6 +495,7 @@
 				175.805419921875,
 				-518.3969116210938
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -496,6 +518,7 @@
 				150.1764373779297,
 				-540.5581665039062
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -518,6 +541,7 @@
 				121.97794342041016,
 				-562.9517211914062
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -540,6 +564,7 @@
 				93.875,
 				-584.154296875
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -562,6 +587,7 @@
 				66.59139251708984,
 				-606.0298461914062
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -584,6 +610,7 @@
 				326.036376953125,
 				-364.001708984375
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -606,6 +633,7 @@
 				13.979329109191895,
 				-650.4629516601562
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -628,6 +656,7 @@
 				-17.71085548400879,
 				-673.206298828125
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -650,6 +679,7 @@
 				286.4956970214844,
 				-408.7227478027344
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -672,6 +702,7 @@
 				307.03466796875,
 				-386.10693359375
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -694,6 +725,7 @@
 				348.6143493652344,
 				-343.0010681152344
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -716,6 +748,7 @@
 				40.62776565551758,
 				-628.2280883789062
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -738,6 +771,7 @@
 				369.8690490722656,
 				-694.41650390625
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -768,6 +802,7 @@
 				369.8690490722656,
 				-727.5137329101562
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -790,6 +825,7 @@
 				739.3362426757812,
 				-727.5137329101562
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -812,6 +848,7 @@
 				-47.75284957885742,
 				-695.3297729492188
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1561,5 +1598,5 @@
 			"bl_idname": "NodeSocketFloat"
 		}
 	],
-	"cached_hash": "b0f3e81f28bd2f11113121e1d89fb0b0"
+	"cached_hash": "8edf28bcf0623a330f7f37228f3a97f4"
 }
