--- a/fast64_internal/f3d/node_library/TextureSettings_Lite.json
+++ b/fast64_internal/f3d/node_library/TextureSettings_Lite.json
@@ -12,6 +12,7 @@
 				326.036376953125,
 				-364.001708984375
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -34,6 +35,7 @@
 				286.4956970214844,
 				-408.7227478027344
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -56,6 +58,7 @@
 				307.03466796875,
 				-386.10693359375
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -78,6 +81,7 @@
 				348.6143493652344,
 				-343.0010681152344
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -195,6 +199,7 @@
 				268.7016296386719,
 				-432.3738098144531
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -217,6 +222,7 @@
 				243.0726318359375,
 				-454.5351257324219
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -239,6 +245,7 @@
 				219.5551300048828,
 				-474.9759216308594
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -261,6 +268,7 @@
 				187.8649444580078,
 				-497.71923828125
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -283,6 +291,7 @@
 				-15.6982421875,
 				74.20230865478516
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -305,6 +314,7 @@
 				9.509074211120605,
 				52.10042190551758
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -327,6 +337,7 @@
 				54.72395706176758,
 				8.810302734375
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -349,6 +360,7 @@
 				32.9530029296875,
 				30.79899024963379
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -371,6 +383,7 @@
 				73.71573638916016,
 				-13.604166984558105
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -393,6 +406,7 @@
 				98.6142578125,
 				-34.51725387573242
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -415,6 +429,7 @@
 				154.7109375,
 				-85.29825592041016
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -437,6 +452,7 @@
 				124.95369720458984,
 				-62.45369338989258
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -459,6 +475,7 @@
 				369.869140625,
 				-100.90413665771484
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -481,6 +498,7 @@
 				739.33642578125,
 				-561.6321411132812
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -503,6 +521,7 @@
 				369.8690490722656,
 				-561.6321411132812
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -529,6 +548,7 @@
 				369.8690490722656,
 				-518.6503295898438
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -1053,5 +1073,5 @@
 			"bl_idname": "NodeSocketFloat"
 		}
 	],
-	"cached_hash": "ec590ae59eb5c3f3c895204e551ed375"
+	"cached_hash": "1b93be23ed2e0fa8d620f88b10ab41c2"
 }
