--- a/fast64_internal/f3d/node_library/TileRepeatSettings.json
+++ b/fast64_internal/f3d/node_library/TileRepeatSettings.json
@@ -105,6 +105,7 @@
 				-262.2360534667969,
 				-295.0882873535156
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -266,6 +267,7 @@
 				-262.2360534667969,
 				88.35157775878906
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -326,6 +328,7 @@
 				-262.2360534667969,
 				170.73748779296875
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -424,6 +427,7 @@
 				306.9469299316406,
 				385.2226867675781
 			],
+			"width": 16.0,
 			"outputs": {
 				"0": {
 					"links": [
@@ -779,5 +783,5 @@
 			"bl_idname": "NodeSocketVector"
 		}
 	],
-	"cached_hash": "5991954c3649af10457436f94f071087"
+	"cached_hash": "f68aa9c026c030d8e26073fe2f745674"
 }
